src/K8sManifests/TimeTracker/4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timetracker-deployment
  namespace: timetracker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: timetracker-deployment
  template:
    metadata:
      labels:
        app: timetracker-deployment
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: timetracker
        image: acrakslzaccel234.azurecr.io/timetracker:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: sql-secret-csi
          mountPath: "/mnt/sql-secret-csi"
          readOnly: true
      volumes:
        - name: sql-secret-csi
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "timetracker-sql-secret-csi"
