src/K8sManifests/TimeTracker/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timetracker-service
  namespace: timetracker
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: timetracker-deployment
