src/K8sManifests/TimeTracker/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  namespace: timetracker
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: timetracker.private.contoso.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: timetracker-service
            port:
              number: 80
